<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />

        <item
            android:id="@+id/nav_notifications_drawer"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/title_notifications" />
    </group>

    <group android:id="@+id/nav_settings_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/logout_button_text" />
    </group>
</menu> 