<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.smarthomeappfinal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.smarthomeappfinal.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_account"
            app:destination="@id/navigation_account" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_camera_capture"
            app:destination="@id/navigation_camera_capture" />
        <action
            android:id="@+id/action_navigation_notifications_to_device_management"
            app:destination="@id/navigation_device_management" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera_capture"
        android:name="com.example.smarthomeappfinal.ui.camera.CameraCaptureFragment"
        android:label="Camera View"
        tools:layout="@layout/fragment_camera_capture" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.smarthomeappfinal.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_device_management"
        android:name="com.example.smarthomeappfinal.ui.devicemanagement.DeviceManagementFragment"
        android:label="@string/title_device_management"
        tools:layout="@layout/fragment_device_management" />
</navigation>